Prevent user image from stretching (#94)

--- a/assets/css/contents/user/user.scss
+++ b/assets/css/contents/user/user.scss
@@ -18,6 +18,7 @@
 
 	img {
 		display: block;
+		object-fit: cover;
 		width:   100%;
 		height:  100%;
 	}
